@@ -195,6 +195,7 @@ tiberium-wont-damage-biters=Biters Immune to Tiberium Damage
 tiberium-spread=Tiberium Patch Size
 tiberium-starting-area=Tiberium in Starting Area
 tiberium-advanced-start=Tiberium Advanced Start
+tiberium-ore-removal=Tiberium Ore Only
 
 [mod-setting-description]
 tiberium-byproduct-1=Whether refining recipes produce Tiberium Sludge waste.\nDefault: enabled
@@ -211,5 +212,5 @@ tiberium-value=Scales how much raw material you get from a single piece of Tiber
 biters-immune-to-tiberium-damage=Prevents biters from dying to Tiberium fields.  Does not affect damage dealt with Tiberium weapons.\nDefault: disabled
 tiberium-spread=Controls how rapidly Tiberium spreads.  Higher values will aggressively cover the landscape. Zero will give regenerating fields that don't expand infinitely.\nDefault: 30
 tiberium-starting-area=This will include Tiberium as one of your starting ore patches.\nYes, it will spread and eat the other starting ore patches.\nYes, that will make the game significantly more difficult.\nYou can expect no mercy and only pain, you've been warned.\nDefault: disabled
-tiberium-advanced-start=Start with some basic tiberium refining equipment, and all other resources removed, so that you can do a tiberium only run. Tiberium in Starting Area should also be on.
-
+tiberium-advanced-start=Start with some basic tiberium refining equipment, so that you can do a tiberium only run. Tiberium in Starting Area should also be on. \nDefault: disabled
+tiberium-ore-removal=Removes other resources, so only Tiberium is placed on the map. There are some exceptions to this. Also grants equipment, regardless of that option's state. \nDefault: disabled
