@@ -8,6 +8,8 @@ Version: 0.1.13
 	- Fixed crash due to changed textures from base game 18.36 update
 	- Fixed Tiberium Ore not having an emissions multiplier
 	- Fixed an on cofig thing so you should be able to switch from main branch to the beta without issue in an ongoing save.
+	- Earendel's Jetpack Character is not damaged when flying over tiberium.
+	- Fixed Tib only start breaking fuge recipes
   Changes:	
 	- Updated minimum base game version to 18.27
 	- Added descriptions for remaining entities
@@ -17,11 +19,15 @@ Version: 0.1.13
 	- Tiberium growth now resumes when Spikes are removed
 	- Added a Third output fluidbox for some mod compatibility.
 	- Put an incompatibility between Beta and the Main Mod.
+	- Split the Tiberium Equipment and other ore removal into separate settings.
+	- Retired growth-credit setting, since we have the tech now.
+	- Updated internal setting names to avoid name collisions with other mods
   Features:
     - We now have a Tib only starting option.
 	- Automated recipe breakdown method, for compatibility with basically every mod that adds new science packs or resources.
 	- Tib Power Armour
 	- Growth Accelerator Crafting Speed tech
+	- Setting to have damage from tiberium in inventory scale with the number. Default off, since it's already pretty heavy.
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.12
   Bugfixes:
